Alterado/compilador.output
Terminals unused in grammar

    ARRAY
    A_COLCHETES
    F_COLCHETES
    OF
    LABEL
    T_OR
    T_AND
    T_NOT


State 22 conflicts: 2 shift/reduce
State 156 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: $@1 PROGRAM identificador ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 bloco PONTO

    4 $@3: ε

    5 $@4: ε

    6 bloco: $@3 parte_declara_tipo parte_declara_vars parte_declara_subrotinas $@4 comando_composto

    7 tipo: identificador

    8 $@5: ε

    9 parte_declara_tipo: TYPE $@5 declara_tipo
   10                   | ε

   11 $@6: ε

   12 declara_tipo: declara_tipo identificador $@6 T_IGUAL tipo PONTO_E_VIRGULA

   13 $@7: ε

   14 declara_tipo: identificador $@7 T_IGUAL tipo PONTO_E_VIRGULA

   15 $@8: ε

   16 parte_declara_vars: VAR $@8 declara_vars
   17                   | ε

   18 declara_vars: declara_vars lista_ident DOIS_PONTOS tipo PONTO_E_VIRGULA
   19             | lista_ident DOIS_PONTOS tipo PONTO_E_VIRGULA

   20 lista_ident: lista_ident VIRGULA identificador
   21            | identificador

   22 parte_declara_subrotinas: parte_declara_subrotinas procedimento_funcao
   23                         | procedimento_funcao
   24                         | ε

   25 procedimento_funcao: declara_procedimento
   26                    | declara_funcao

   27 $@9: ε

   28 $@10: ε

   29 declara_procedimento: PROCEDURE $@9 identificador_subrotina parametros_formais PONTO_E_VIRGULA $@10 bloco PONTO_E_VIRGULA

   30 $@11: ε

   31 $@12: ε

   32 declara_funcao: FUNCTION $@11 identificador_func parametros_formais DOIS_PONTOS tipo PONTO_E_VIRGULA $@12 bloco PONTO_E_VIRGULA

   33 identificador_subrotina: IDENT

   34 identificador_func: IDENT

   35 $@13: ε

   36 $@14: ε

   37 parametros_formais: ABRE_PARENTESES $@13 sec_parametros_formais $@14 FECHA_PARENTESES
   38                   | ε

   39 sec_parametros_formais: sec_parametros_formais PONTO_E_VIRGULA VAR lista_ident_par_r DOIS_PONTOS tipo
   40                       | VAR lista_ident_par_r DOIS_PONTOS tipo
   41                       | sec_parametros_formais PONTO_E_VIRGULA lista_ident_par_f DOIS_PONTOS tipo
   42                       | lista_ident_par_f DOIS_PONTOS tipo

   43 lista_ident_par_r: lista_ident_par_r VIRGULA identificador
   44                  | identificador

   45 lista_ident_par_f: lista_ident_par_f VIRGULA identificador
   46                  | identificador

   47 comando_composto: T_BEGIN comando T_END

   48 comando: comando PONTO_E_VIRGULA comando_s_rotulo
   49        | comando_s_rotulo

   50 comando_s_rotulo: variavel_ident
   51                 | comando_composto
   52                 | comando_condicional
   53                 | comando_repetitivo

   54 $@15: ε

   55 variavel_ident: IDENT $@15 funcao_atr

   56 funcao_atr: ATRIBUICAO expressao_simples
   57           | chamada_proced

   58 $@16: ε

   59 chamada_proced: ABRE_PARENTESES $@16 lista_de_expressao FECHA_PARENTESES
   60               | ε

   61 $@17: ε

   62 $@18: ε

   63 comando_condicional: T_IF $@17 expressao_bool $@18 T_THEN comando_s_rotulo else_condicional

   64 $@19: ε

   65 else_condicional: T_ELSE $@19 comando_s_rotulo
   66                 | ε

   67 $@20: ε

   68 $@21: ε

   69 $@22: ε

   70 comando_repetitivo: T_WHILE $@20 expressao_bool $@21 T_DO $@22 comando_s_rotulo

   71 lista_de_expressao: lista_de_expressao VIRGULA expressao_simples
   72                   | expressao_simples

   73 expressao_bool: expressao_simples relacao expressao_simples

   74 $@23: ε

   75 expressao_bool: ABRE_PARENTESES expressao_simples relacao expressao_simples $@23 FECHA_PARENTESES

   76 relacao: T_IGUAL
   77        | T_DIFERENTE
   78        | T_MENOR
   79        | T_MENOR_IGUAL
   80        | T_MAIOR
   81        | T_MAIOR_IGUAL

   82 expressao_simples: termo
   83                  | termo T_MAIS expressao_simples
   84                  | termo T_MENOS expressao_simples

   85 termo: fator
   86      | fator T_MULT fator
   87      | fator T_DIV fator

   88 fator: identificador
   89      | chamada_func
   90      | ABRE_PARENTESES expressao_simples FECHA_PARENTESES
   91      | NUMERO

   92 $@24: ε

   93 chamada_func: identificador $@24 par_func

   94 par_func: ABRE_PARENTESES lista_de_expressao FECHA_PARENTESES

   95 identificador: IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 3
    TYPE (259) 9
    ARRAY (260)
    ABRE_PARENTESES (261) 3 37 59 75 90 94
    FECHA_PARENTESES (262) 3 37 59 75 90 94
    A_COLCHETES (263)
    F_COLCHETES (264)
    OF (265)
    LABEL (266)
    PROCEDURE (267) 29
    FUNCTION (268) 32
    T_IF (269) 63
    T_THEN (270) 63
    T_ELSE (271) 65
    T_WHILE (272) 70
    T_DO (273) 70
    T_IGUAL (274) 12 14 76
    T_DIFERENTE (275) 77
    T_MAIOR_IGUAL (276) 81
    T_MENOR_IGUAL (277) 79
    T_MAIOR (278) 80
    T_MENOR (279) 78
    T_MAIS (280) 83
    T_MENOS (281) 84
    T_OR (282)
    T_MULT (283) 86
    T_DIV (284) 87
    T_AND (285)
    T_NOT (286)
    VIRGULA (287) 20 43 45 71
    PONTO_E_VIRGULA (288) 3 12 14 18 19 29 32 39 41 48
    DOIS_PONTOS (289) 18 19 32 39 40 41 42
    PONTO (290) 3
    T_BEGIN (291) 47
    T_END (292) 47
    VAR (293) 16 39 40
    NUMERO (294) 91
    IDENT (295) 33 34 55 95
    ATRIBUICAO (296) 56


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    programa (43)
        on left: 3
        on right: 0
    $@1 (44)
        on left: 1
        on right: 3
    $@2 (45)
        on left: 2
        on right: 3
    bloco (46)
        on left: 6
        on right: 3 29 32
    $@3 (47)
        on left: 4
        on right: 6
    $@4 (48)
        on left: 5
        on right: 6
    tipo (49)
        on left: 7
        on right: 12 14 18 19 32 39 40 41 42
    parte_declara_tipo (50)
        on left: 9 10
        on right: 6
    $@5 (51)
        on left: 8
        on right: 9
    declara_tipo (52)
        on left: 12 14
        on right: 9 12
    $@6 (53)
        on left: 11
        on right: 12
    $@7 (54)
        on left: 13
        on right: 14
    parte_declara_vars (55)
        on left: 16 17
        on right: 6
    $@8 (56)
        on left: 15
        on right: 16
    declara_vars (57)
        on left: 18 19
        on right: 16 18
    lista_ident (58)
        on left: 20 21
        on right: 3 18 19 20
    parte_declara_subrotinas (59)
        on left: 22 23 24
        on right: 6 22
    procedimento_funcao (60)
        on left: 25 26
        on right: 22 23
    declara_procedimento (61)
        on left: 29
        on right: 25
    $@9 (62)
        on left: 27
        on right: 29
    $@10 (63)
        on left: 28
        on right: 29
    declara_funcao (64)
        on left: 32
        on right: 26
    $@11 (65)
        on left: 30
        on right: 32
    $@12 (66)
        on left: 31
        on right: 32
    identificador_subrotina (67)
        on left: 33
        on right: 29
    identificador_func (68)
        on left: 34
        on right: 32
    parametros_formais (69)
        on left: 37 38
        on right: 29 32
    $@13 (70)
        on left: 35
        on right: 37
    $@14 (71)
        on left: 36
        on right: 37
    sec_parametros_formais (72)
        on left: 39 40 41 42
        on right: 37 39 41
    lista_ident_par_r (73)
        on left: 43 44
        on right: 39 40 43
    lista_ident_par_f (74)
        on left: 45 46
        on right: 41 42 45
    comando_composto (75)
        on left: 47
        on right: 6 51
    comando (76)
        on left: 48 49
        on right: 47 48
    comando_s_rotulo (77)
        on left: 50 51 52 53
        on right: 48 49 63 65 70
    variavel_ident (78)
        on left: 55
        on right: 50
    $@15 (79)
        on left: 54
        on right: 55
    funcao_atr (80)
        on left: 56 57
        on right: 55
    chamada_proced (81)
        on left: 59 60
        on right: 57
    $@16 (82)
        on left: 58
        on right: 59
    comando_condicional (83)
        on left: 63
        on right: 52
    $@17 (84)
        on left: 61
        on right: 63
    $@18 (85)
        on left: 62
        on right: 63
    else_condicional (86)
        on left: 65 66
        on right: 63
    $@19 (87)
        on left: 64
        on right: 65
    comando_repetitivo (88)
        on left: 70
        on right: 53
    $@20 (89)
        on left: 67
        on right: 70
    $@21 (90)
        on left: 68
        on right: 70
    $@22 (91)
        on left: 69
        on right: 70
    lista_de_expressao (92)
        on left: 71 72
        on right: 59 71 94
    expressao_bool (93)
        on left: 73 75
        on right: 63 70
    $@23 (94)
        on left: 74
        on right: 75
    relacao (95)
        on left: 76 77 78 79 80 81
        on right: 73 75
    expressao_simples (96)
        on left: 82 83 84
        on right: 56 71 72 73 75 83 84 90
    termo (97)
        on left: 85 86 87
        on right: 82 83 84
    fator (98)
        on left: 88 89 90 91
        on right: 85 86 87
    chamada_func (99)
        on left: 93
        on right: 89
    $@24 (100)
        on left: 92
        on right: 93
    par_func (101)
        on left: 94
        on right: 93
    identificador (102)
        on left: 95
        on right: 3 7 12 14 20 21 43 44 45 46 88 93


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    3 programa: $@1 • PROGRAM identificador ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    3 programa: $@1 PROGRAM • identificador ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 bloco PONTO

    IDENT  shift, and go to state 5

    identificador  go to state 6


State 5

   95 identificador: IDENT •

    $default  reduce using rule 95 (identificador)


State 6

    3 programa: $@1 PROGRAM identificador • ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 bloco PONTO

    ABRE_PARENTESES  shift, and go to state 7


State 7

    3 programa: $@1 PROGRAM identificador ABRE_PARENTESES • lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 bloco PONTO

    IDENT  shift, and go to state 5

    lista_ident    go to state 8
    identificador  go to state 9


State 8

    3 programa: $@1 PROGRAM identificador ABRE_PARENTESES lista_ident • FECHA_PARENTESES PONTO_E_VIRGULA $@2 bloco PONTO
   20 lista_ident: lista_ident • VIRGULA identificador

    FECHA_PARENTESES  shift, and go to state 10
    VIRGULA           shift, and go to state 11


State 9

   21 lista_ident: identificador •

    $default  reduce using rule 21 (lista_ident)


State 10

    3 programa: $@1 PROGRAM identificador ABRE_PARENTESES lista_ident FECHA_PARENTESES • PONTO_E_VIRGULA $@2 bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


State 11

   20 lista_ident: lista_ident VIRGULA • identificador

    IDENT  shift, and go to state 5

    identificador  go to state 13


State 12

    3 programa: $@1 PROGRAM identificador ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA • $@2 bloco PONTO

    $default  reduce using rule 2 ($@2)

    $@2  go to state 14


State 13

   20 lista_ident: lista_ident VIRGULA identificador •

    $default  reduce using rule 20 (lista_ident)


State 14

    3 programa: $@1 PROGRAM identificador ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 • bloco PONTO

    $default  reduce using rule 4 ($@3)

    bloco  go to state 15
    $@3    go to state 16


State 15

    3 programa: $@1 PROGRAM identificador ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 bloco • PONTO

    PONTO  shift, and go to state 17


State 16

    6 bloco: $@3 • parte_declara_tipo parte_declara_vars parte_declara_subrotinas $@4 comando_composto

    TYPE  shift, and go to state 18

    $default  reduce using rule 10 (parte_declara_tipo)

    parte_declara_tipo  go to state 19


State 17

    3 programa: $@1 PROGRAM identificador ABRE_PARENTESES lista_ident FECHA_PARENTESES PONTO_E_VIRGULA $@2 bloco PONTO •

    $default  reduce using rule 3 (programa)


State 18

    9 parte_declara_tipo: TYPE • $@5 declara_tipo

    $default  reduce using rule 8 ($@5)

    $@5  go to state 20


State 19

    6 bloco: $@3 parte_declara_tipo • parte_declara_vars parte_declara_subrotinas $@4 comando_composto

    VAR  shift, and go to state 21

    $default  reduce using rule 17 (parte_declara_vars)

    parte_declara_vars  go to state 22


State 20

    9 parte_declara_tipo: TYPE $@5 • declara_tipo

    IDENT  shift, and go to state 5

    declara_tipo   go to state 23
    identificador  go to state 24


State 21

   16 parte_declara_vars: VAR • $@8 declara_vars

    $default  reduce using rule 15 ($@8)

    $@8  go to state 25


State 22

    6 bloco: $@3 parte_declara_tipo parte_declara_vars • parte_declara_subrotinas $@4 comando_composto

    PROCEDURE  shift, and go to state 26
    FUNCTION   shift, and go to state 27

    PROCEDURE  [reduce using rule 24 (parte_declara_subrotinas)]
    FUNCTION   [reduce using rule 24 (parte_declara_subrotinas)]
    $default   reduce using rule 24 (parte_declara_subrotinas)

    parte_declara_subrotinas  go to state 28
    procedimento_funcao       go to state 29
    declara_procedimento      go to state 30
    declara_funcao            go to state 31


State 23

    9 parte_declara_tipo: TYPE $@5 declara_tipo •
   12 declara_tipo: declara_tipo • identificador $@6 T_IGUAL tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 5

    $default  reduce using rule 9 (parte_declara_tipo)

    identificador  go to state 32


State 24

   14 declara_tipo: identificador • $@7 T_IGUAL tipo PONTO_E_VIRGULA

    $default  reduce using rule 13 ($@7)

    $@7  go to state 33


State 25

   16 parte_declara_vars: VAR $@8 • declara_vars

    IDENT  shift, and go to state 5

    declara_vars   go to state 34
    lista_ident    go to state 35
    identificador  go to state 9


State 26

   29 declara_procedimento: PROCEDURE • $@9 identificador_subrotina parametros_formais PONTO_E_VIRGULA $@10 bloco PONTO_E_VIRGULA

    $default  reduce using rule 27 ($@9)

    $@9  go to state 36


State 27

   32 declara_funcao: FUNCTION • $@11 identificador_func parametros_formais DOIS_PONTOS tipo PONTO_E_VIRGULA $@12 bloco PONTO_E_VIRGULA

    $default  reduce using rule 30 ($@11)

    $@11  go to state 37


State 28

    6 bloco: $@3 parte_declara_tipo parte_declara_vars parte_declara_subrotinas • $@4 comando_composto
   22 parte_declara_subrotinas: parte_declara_subrotinas • procedimento_funcao

    PROCEDURE  shift, and go to state 26
    FUNCTION   shift, and go to state 27

    $default  reduce using rule 5 ($@4)

    $@4                   go to state 38
    procedimento_funcao   go to state 39
    declara_procedimento  go to state 30
    declara_funcao        go to state 31


State 29

   23 parte_declara_subrotinas: procedimento_funcao •

    $default  reduce using rule 23 (parte_declara_subrotinas)


State 30

   25 procedimento_funcao: declara_procedimento •

    $default  reduce using rule 25 (procedimento_funcao)


State 31

   26 procedimento_funcao: declara_funcao •

    $default  reduce using rule 26 (procedimento_funcao)


State 32

   12 declara_tipo: declara_tipo identificador • $@6 T_IGUAL tipo PONTO_E_VIRGULA

    $default  reduce using rule 11 ($@6)

    $@6  go to state 40


State 33

   14 declara_tipo: identificador $@7 • T_IGUAL tipo PONTO_E_VIRGULA

    T_IGUAL  shift, and go to state 41


State 34

   16 parte_declara_vars: VAR $@8 declara_vars •
   18 declara_vars: declara_vars • lista_ident DOIS_PONTOS tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 5

    $default  reduce using rule 16 (parte_declara_vars)

    lista_ident    go to state 42
    identificador  go to state 9


State 35

   19 declara_vars: lista_ident • DOIS_PONTOS tipo PONTO_E_VIRGULA
   20 lista_ident: lista_ident • VIRGULA identificador

    VIRGULA      shift, and go to state 11
    DOIS_PONTOS  shift, and go to state 43


State 36

   29 declara_procedimento: PROCEDURE $@9 • identificador_subrotina parametros_formais PONTO_E_VIRGULA $@10 bloco PONTO_E_VIRGULA

    IDENT  shift, and go to state 44

    identificador_subrotina  go to state 45


State 37

   32 declara_funcao: FUNCTION $@11 • identificador_func parametros_formais DOIS_PONTOS tipo PONTO_E_VIRGULA $@12 bloco PONTO_E_VIRGULA

    IDENT  shift, and go to state 46

    identificador_func  go to state 47


State 38

    6 bloco: $@3 parte_declara_tipo parte_declara_vars parte_declara_subrotinas $@4 • comando_composto

    T_BEGIN  shift, and go to state 48

    comando_composto  go to state 49


State 39

   22 parte_declara_subrotinas: parte_declara_subrotinas procedimento_funcao •

    $default  reduce using rule 22 (parte_declara_subrotinas)


State 40

   12 declara_tipo: declara_tipo identificador $@6 • T_IGUAL tipo PONTO_E_VIRGULA

    T_IGUAL  shift, and go to state 50


State 41

   14 declara_tipo: identificador $@7 T_IGUAL • tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 5

    tipo           go to state 51
    identificador  go to state 52


State 42

   18 declara_vars: declara_vars lista_ident • DOIS_PONTOS tipo PONTO_E_VIRGULA
   20 lista_ident: lista_ident • VIRGULA identificador

    VIRGULA      shift, and go to state 11
    DOIS_PONTOS  shift, and go to state 53


State 43

   19 declara_vars: lista_ident DOIS_PONTOS • tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 5

    tipo           go to state 54
    identificador  go to state 52


State 44

   33 identificador_subrotina: IDENT •

    $default  reduce using rule 33 (identificador_subrotina)


State 45

   29 declara_procedimento: PROCEDURE $@9 identificador_subrotina • parametros_formais PONTO_E_VIRGULA $@10 bloco PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 55

    $default  reduce using rule 38 (parametros_formais)

    parametros_formais  go to state 56


State 46

   34 identificador_func: IDENT •

    $default  reduce using rule 34 (identificador_func)


State 47

   32 declara_funcao: FUNCTION $@11 identificador_func • parametros_formais DOIS_PONTOS tipo PONTO_E_VIRGULA $@12 bloco PONTO_E_VIRGULA

    ABRE_PARENTESES  shift, and go to state 55

    $default  reduce using rule 38 (parametros_formais)

    parametros_formais  go to state 57


State 48

   47 comando_composto: T_BEGIN • comando T_END

    T_IF     shift, and go to state 58
    T_WHILE  shift, and go to state 59
    T_BEGIN  shift, and go to state 48
    IDENT    shift, and go to state 60

    comando_composto     go to state 61
    comando              go to state 62
    comando_s_rotulo     go to state 63
    variavel_ident       go to state 64
    comando_condicional  go to state 65
    comando_repetitivo   go to state 66


State 49

    6 bloco: $@3 parte_declara_tipo parte_declara_vars parte_declara_subrotinas $@4 comando_composto •

    $default  reduce using rule 6 (bloco)


State 50

   12 declara_tipo: declara_tipo identificador $@6 T_IGUAL • tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 5

    tipo           go to state 67
    identificador  go to state 52


State 51

   14 declara_tipo: identificador $@7 T_IGUAL tipo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 68


State 52

    7 tipo: identificador •

    $default  reduce using rule 7 (tipo)


State 53

   18 declara_vars: declara_vars lista_ident DOIS_PONTOS • tipo PONTO_E_VIRGULA

    IDENT  shift, and go to state 5

    tipo           go to state 69
    identificador  go to state 52


State 54

   19 declara_vars: lista_ident DOIS_PONTOS tipo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 70


State 55

   37 parametros_formais: ABRE_PARENTESES • $@13 sec_parametros_formais $@14 FECHA_PARENTESES

    $default  reduce using rule 35 ($@13)

    $@13  go to state 71


State 56

   29 declara_procedimento: PROCEDURE $@9 identificador_subrotina parametros_formais • PONTO_E_VIRGULA $@10 bloco PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 72


State 57

   32 declara_funcao: FUNCTION $@11 identificador_func parametros_formais • DOIS_PONTOS tipo PONTO_E_VIRGULA $@12 bloco PONTO_E_VIRGULA

    DOIS_PONTOS  shift, and go to state 73


State 58

   63 comando_condicional: T_IF • $@17 expressao_bool $@18 T_THEN comando_s_rotulo else_condicional

    $default  reduce using rule 61 ($@17)

    $@17  go to state 74


State 59

   70 comando_repetitivo: T_WHILE • $@20 expressao_bool $@21 T_DO $@22 comando_s_rotulo

    $default  reduce using rule 67 ($@20)

    $@20  go to state 75


State 60

   55 variavel_ident: IDENT • $@15 funcao_atr

    $default  reduce using rule 54 ($@15)

    $@15  go to state 76


State 61

   51 comando_s_rotulo: comando_composto •

    $default  reduce using rule 51 (comando_s_rotulo)


State 62

   47 comando_composto: T_BEGIN comando • T_END
   48 comando: comando • PONTO_E_VIRGULA comando_s_rotulo

    PONTO_E_VIRGULA  shift, and go to state 77
    T_END            shift, and go to state 78


State 63

   49 comando: comando_s_rotulo •

    $default  reduce using rule 49 (comando)


State 64

   50 comando_s_rotulo: variavel_ident •

    $default  reduce using rule 50 (comando_s_rotulo)


State 65

   52 comando_s_rotulo: comando_condicional •

    $default  reduce using rule 52 (comando_s_rotulo)


State 66

   53 comando_s_rotulo: comando_repetitivo •

    $default  reduce using rule 53 (comando_s_rotulo)


State 67

   12 declara_tipo: declara_tipo identificador $@6 T_IGUAL tipo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 79


State 68

   14 declara_tipo: identificador $@7 T_IGUAL tipo PONTO_E_VIRGULA •

    $default  reduce using rule 14 (declara_tipo)


State 69

   18 declara_vars: declara_vars lista_ident DOIS_PONTOS tipo • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 80


State 70

   19 declara_vars: lista_ident DOIS_PONTOS tipo PONTO_E_VIRGULA •

    $default  reduce using rule 19 (declara_vars)


State 71

   37 parametros_formais: ABRE_PARENTESES $@13 • sec_parametros_formais $@14 FECHA_PARENTESES

    VAR    shift, and go to state 81
    IDENT  shift, and go to state 5

    sec_parametros_formais  go to state 82
    lista_ident_par_f       go to state 83
    identificador           go to state 84


State 72

   29 declara_procedimento: PROCEDURE $@9 identificador_subrotina parametros_formais PONTO_E_VIRGULA • $@10 bloco PONTO_E_VIRGULA

    $default  reduce using rule 28 ($@10)

    $@10  go to state 85


State 73

   32 declara_funcao: FUNCTION $@11 identificador_func parametros_formais DOIS_PONTOS • tipo PONTO_E_VIRGULA $@12 bloco PONTO_E_VIRGULA

    IDENT  shift, and go to state 5

    tipo           go to state 86
    identificador  go to state 52


State 74

   63 comando_condicional: T_IF $@17 • expressao_bool $@18 T_THEN comando_s_rotulo else_condicional

    ABRE_PARENTESES  shift, and go to state 87
    NUMERO           shift, and go to state 88
    IDENT            shift, and go to state 5

    expressao_bool     go to state 89
    expressao_simples  go to state 90
    termo              go to state 91
    fator              go to state 92
    chamada_func       go to state 93
    identificador      go to state 94


State 75

   70 comando_repetitivo: T_WHILE $@20 • expressao_bool $@21 T_DO $@22 comando_s_rotulo

    ABRE_PARENTESES  shift, and go to state 87
    NUMERO           shift, and go to state 88
    IDENT            shift, and go to state 5

    expressao_bool     go to state 95
    expressao_simples  go to state 90
    termo              go to state 91
    fator              go to state 92
    chamada_func       go to state 93
    identificador      go to state 94


State 76

   55 variavel_ident: IDENT $@15 • funcao_atr

    ABRE_PARENTESES  shift, and go to state 96
    ATRIBUICAO       shift, and go to state 97

    $default  reduce using rule 60 (chamada_proced)

    funcao_atr      go to state 98
    chamada_proced  go to state 99


State 77

   48 comando: comando PONTO_E_VIRGULA • comando_s_rotulo

    T_IF     shift, and go to state 58
    T_WHILE  shift, and go to state 59
    T_BEGIN  shift, and go to state 48
    IDENT    shift, and go to state 60

    comando_composto     go to state 61
    comando_s_rotulo     go to state 100
    variavel_ident       go to state 64
    comando_condicional  go to state 65
    comando_repetitivo   go to state 66


State 78

   47 comando_composto: T_BEGIN comando T_END •

    $default  reduce using rule 47 (comando_composto)


State 79

   12 declara_tipo: declara_tipo identificador $@6 T_IGUAL tipo PONTO_E_VIRGULA •

    $default  reduce using rule 12 (declara_tipo)


State 80

   18 declara_vars: declara_vars lista_ident DOIS_PONTOS tipo PONTO_E_VIRGULA •

    $default  reduce using rule 18 (declara_vars)


State 81

   40 sec_parametros_formais: VAR • lista_ident_par_r DOIS_PONTOS tipo

    IDENT  shift, and go to state 5

    lista_ident_par_r  go to state 101
    identificador      go to state 102


State 82

   37 parametros_formais: ABRE_PARENTESES $@13 sec_parametros_formais • $@14 FECHA_PARENTESES
   39 sec_parametros_formais: sec_parametros_formais • PONTO_E_VIRGULA VAR lista_ident_par_r DOIS_PONTOS tipo
   41                       | sec_parametros_formais • PONTO_E_VIRGULA lista_ident_par_f DOIS_PONTOS tipo

    PONTO_E_VIRGULA  shift, and go to state 103

    $default  reduce using rule 36 ($@14)

    $@14  go to state 104


State 83

   42 sec_parametros_formais: lista_ident_par_f • DOIS_PONTOS tipo
   45 lista_ident_par_f: lista_ident_par_f • VIRGULA identificador

    VIRGULA      shift, and go to state 105
    DOIS_PONTOS  shift, and go to state 106


State 84

   46 lista_ident_par_f: identificador •

    $default  reduce using rule 46 (lista_ident_par_f)


State 85

   29 declara_procedimento: PROCEDURE $@9 identificador_subrotina parametros_formais PONTO_E_VIRGULA $@10 • bloco PONTO_E_VIRGULA

    $default  reduce using rule 4 ($@3)

    bloco  go to state 107
    $@3    go to state 16


State 86

   32 declara_funcao: FUNCTION $@11 identificador_func parametros_formais DOIS_PONTOS tipo • PONTO_E_VIRGULA $@12 bloco PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 108


State 87

   75 expressao_bool: ABRE_PARENTESES • expressao_simples relacao expressao_simples $@23 FECHA_PARENTESES
   90 fator: ABRE_PARENTESES • expressao_simples FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 109
    NUMERO           shift, and go to state 88
    IDENT            shift, and go to state 5

    expressao_simples  go to state 110
    termo              go to state 91
    fator              go to state 92
    chamada_func       go to state 93
    identificador      go to state 94


State 88

   91 fator: NUMERO •

    $default  reduce using rule 91 (fator)


State 89

   63 comando_condicional: T_IF $@17 expressao_bool • $@18 T_THEN comando_s_rotulo else_condicional

    $default  reduce using rule 62 ($@18)

    $@18  go to state 111


State 90

   73 expressao_bool: expressao_simples • relacao expressao_simples

    T_IGUAL        shift, and go to state 112
    T_DIFERENTE    shift, and go to state 113
    T_MAIOR_IGUAL  shift, and go to state 114
    T_MENOR_IGUAL  shift, and go to state 115
    T_MAIOR        shift, and go to state 116
    T_MENOR        shift, and go to state 117

    relacao  go to state 118


State 91

   82 expressao_simples: termo •
   83                  | termo • T_MAIS expressao_simples
   84                  | termo • T_MENOS expressao_simples

    T_MAIS   shift, and go to state 119
    T_MENOS  shift, and go to state 120

    $default  reduce using rule 82 (expressao_simples)


State 92

   85 termo: fator •
   86      | fator • T_MULT fator
   87      | fator • T_DIV fator

    T_MULT  shift, and go to state 121
    T_DIV   shift, and go to state 122

    $default  reduce using rule 85 (termo)


State 93

   89 fator: chamada_func •

    $default  reduce using rule 89 (fator)


State 94

   88 fator: identificador •
   93 chamada_func: identificador • $@24 par_func

    ABRE_PARENTESES  reduce using rule 92 ($@24)
    $default         reduce using rule 88 (fator)

    $@24  go to state 123


State 95

   70 comando_repetitivo: T_WHILE $@20 expressao_bool • $@21 T_DO $@22 comando_s_rotulo

    $default  reduce using rule 68 ($@21)

    $@21  go to state 124


State 96

   59 chamada_proced: ABRE_PARENTESES • $@16 lista_de_expressao FECHA_PARENTESES

    $default  reduce using rule 58 ($@16)

    $@16  go to state 125


State 97

   56 funcao_atr: ATRIBUICAO • expressao_simples

    ABRE_PARENTESES  shift, and go to state 109
    NUMERO           shift, and go to state 88
    IDENT            shift, and go to state 5

    expressao_simples  go to state 126
    termo              go to state 91
    fator              go to state 92
    chamada_func       go to state 93
    identificador      go to state 94


State 98

   55 variavel_ident: IDENT $@15 funcao_atr •

    $default  reduce using rule 55 (variavel_ident)


State 99

   57 funcao_atr: chamada_proced •

    $default  reduce using rule 57 (funcao_atr)


State 100

   48 comando: comando PONTO_E_VIRGULA comando_s_rotulo •

    $default  reduce using rule 48 (comando)


State 101

   40 sec_parametros_formais: VAR lista_ident_par_r • DOIS_PONTOS tipo
   43 lista_ident_par_r: lista_ident_par_r • VIRGULA identificador

    VIRGULA      shift, and go to state 127
    DOIS_PONTOS  shift, and go to state 128


State 102

   44 lista_ident_par_r: identificador •

    $default  reduce using rule 44 (lista_ident_par_r)


State 103

   39 sec_parametros_formais: sec_parametros_formais PONTO_E_VIRGULA • VAR lista_ident_par_r DOIS_PONTOS tipo
   41                       | sec_parametros_formais PONTO_E_VIRGULA • lista_ident_par_f DOIS_PONTOS tipo

    VAR    shift, and go to state 129
    IDENT  shift, and go to state 5

    lista_ident_par_f  go to state 130
    identificador      go to state 84


State 104

   37 parametros_formais: ABRE_PARENTESES $@13 sec_parametros_formais $@14 • FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 131


State 105

   45 lista_ident_par_f: lista_ident_par_f VIRGULA • identificador

    IDENT  shift, and go to state 5

    identificador  go to state 132


State 106

   42 sec_parametros_formais: lista_ident_par_f DOIS_PONTOS • tipo

    IDENT  shift, and go to state 5

    tipo           go to state 133
    identificador  go to state 52


State 107

   29 declara_procedimento: PROCEDURE $@9 identificador_subrotina parametros_formais PONTO_E_VIRGULA $@10 bloco • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 134


State 108

   32 declara_funcao: FUNCTION $@11 identificador_func parametros_formais DOIS_PONTOS tipo PONTO_E_VIRGULA • $@12 bloco PONTO_E_VIRGULA

    $default  reduce using rule 31 ($@12)

    $@12  go to state 135


State 109

   90 fator: ABRE_PARENTESES • expressao_simples FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 109
    NUMERO           shift, and go to state 88
    IDENT            shift, and go to state 5

    expressao_simples  go to state 136
    termo              go to state 91
    fator              go to state 92
    chamada_func       go to state 93
    identificador      go to state 94


State 110

   75 expressao_bool: ABRE_PARENTESES expressao_simples • relacao expressao_simples $@23 FECHA_PARENTESES
   90 fator: ABRE_PARENTESES expressao_simples • FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 137
    T_IGUAL           shift, and go to state 112
    T_DIFERENTE       shift, and go to state 113
    T_MAIOR_IGUAL     shift, and go to state 114
    T_MENOR_IGUAL     shift, and go to state 115
    T_MAIOR           shift, and go to state 116
    T_MENOR           shift, and go to state 117

    relacao  go to state 138


State 111
